--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,98 @@
-.App {
-  text-align: center;
+/* General Styles */
+body {
+  font-size: 16px;
+  color: rgb(33, 37, 41);
+  font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
+    Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Search Box Styles */
+input {
+  width: 241px;
+  height: 38px;
+  font-size: 16px;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid rgb(206, 212, 218);
+  padding: 6px 12px;
+  border-radius: 4px;
+  margin: 2rem 2rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Filled State (Add specific styles as needed) */
+/* input:not(:placeholder-shown) { */
+/* Add your styles for the filled state here */
+/* } */
+
+/* Active/Focus State */
+input:focus {
+  border-color: #7952b3;
+  box-shadow: 0 0 0 3px rgb(121 82 179 / 25%);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Disabled State */
+input:disabled {
+  background-color: rgb(233, 236, 239);
 }
 
-.App-link {
-  color: #61dafb;
+/* Keyboard Shortcut Styles */
+.keyboard-shortcut {
+  font-size: 12px;
+  border: 1px solid rgb(0, 120, 240);
+  border-radius: 2px;
+  height: 24px;
+  padding: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
+/* Loader style */
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
+}
+
+/* Table Styles */
+table {
+  border-collapse: collapse;
+  width: 90%;
+  margin: 2rem 2rem;
+}
+
+th,
+td {
+  padding: 8px;
+  border: 1px solid rgb(222, 226, 230);
+}
+
+th {
+  font-weight: 700;
+}
+
+img {
+  width: 30px;
+  margin-right: 10px;
+}
+
+/* Pagination Styles */
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+
+.pagination button {
+  margin: 0 5px;
 }
